--- a/single.html
+++ b/single.html
@@ -118,7 +118,7 @@
                                     <b>5 minutes read</b>
                                 </span>
                             </div>
-                            <div class="row describe-page">
+                            <div class="row description-page">
                                 <i>
                                     <h2>Mời các bạn đọc những<a href="#"> bài viết hay nhất</a> bởi cách mạng số trọn
                                         lọc</h2>
@@ -169,8 +169,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -200,8 +200,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -231,8 +231,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -262,8 +262,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -293,8 +293,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -324,8 +324,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -355,8 +355,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -386,8 +386,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -417,8 +417,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -448,8 +448,8 @@
                                 </div>
                                 <div class="main-content-rate">
                                     <ul>
-                                        <li><strong>tác giả : </strong>"eva"</li>
-                                        <li><strong>ngày đăng : </strong>
+                                        <li><strong>Tác giả : </strong>"eva"</li>
+                                        <li><strong>Ngày đăng : </strong>
                                             12/25/2021</li>
                                         <li><strong>Đánh giá : </strong>
                                             <i class="star star100"></i>
@@ -479,10 +479,10 @@
                         <div class="main-bottom-content">
                             <div class="item-content">
                                 <div class="container-img">
-                                    <a href="#"><img src="assets/images/facebook-512.webp"></a>
+                                    <a href="#"><img src="https://via.placeholder.com/376x215.png?text=No+image"></a>
 
                                 </div>
-                                <div class="describe">
+                                <div class="description">
                                     <a href="#">
                                         <h3>Tổng hợp 5 chem chép làm món gì ngon hay nhất</h3>
                                     </a>
@@ -495,10 +495,10 @@
                             </div>
                             <div class="item-content">
                                 <div class="container-img">
-                                    <a href="#"><img src="assets/images/facebook-512.webp"></a>
+                                    <a href="#"><img src="https://via.placeholder.com/376x215.png?text=No+image"></a>
 
                                 </div>
-                                <div class="describe">
+                                <div class="description">
                                     <a href="#">
                                         <h3>Tổng hợp 5 chem chép làm món gì ngon hay nhất</h3>
                                     </a>
@@ -511,10 +511,10 @@
                             </div>
                             <div class="item-content">
                                 <div class="container-img">
-                                    <a href="#"><img src="assets/images/facebook-512.webp"></a>
+                                    <a href="#"><img src="https://via.placeholder.com/376x215.png?text=No+image"></a>
 
                                 </div>
-                                <div class="describe">
+                                <div class="description">
                                     <a href="#">
                                         <h3>Tổng hợp 5 chem chép làm món gì ngon hay nhất</h3>
                                     </a>
@@ -527,10 +527,10 @@
                             </div>
                             <div class="item-content">
                                 <div class="container-img">
-                                    <a href="#"><img src="assets/images/default.png"></a>
+                                    <a href="#"><img src="https://via.placeholder.com/376x215.png?text=No+image"></a>
 
                                 </div>
-                                <div class="describe">
+                                <div class="description">
                                     <a href="#">
                                         <h3>Tổng hợp 5 chem chép làm món gì ngon hay nhất</h3>
                                     </a>
@@ -596,7 +596,7 @@
                             <div class="w-trendding w-post">
                                 <article class="w-item ">
                                     <a href="/rein/classic/" class="thumb hover-effect grid-33 grid-parent">
-                                        <span class="fullimage cover lazy" data-src="assets/images/default.png"></span>
+                                        <span class="fullimage cover lazy" data-src="https://via.placeholder.com/376x215.png?text=No+image"></span>
                                     </a>
                                     <div class="info">
                                         <h3 class="title usmall gradient-effect"><a href="/rein/classic/">The spectacle
@@ -622,7 +622,7 @@
                                 </article>
                                 <article class="w-item ">
                                     <a href="/rein/classic/" class="thumb hover-effect grid-33 grid-parent">
-                                        <span class="fullimage cover lazy" data-src="assets/images/default.png"></span>
+                                        <span class="fullimage cover lazy" data-src="https://via.placeholder.com/376x215.png?text=No+image"></span>
                                     </a>
                                     <div class="info">
                                         <h3 class="title usmall gradient-effect"><a href="/rein/classic/">The spectacle
